# pop-launcher-plugin-app-profiles

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  plugin.ron
config/: firefox.ron
docs/: data_structure.drawio
examples/: vscode.ron
src/: config.rs  main.rs  utils.rs
