[package]
name = "app-profiles"
version = "0.2.2"
repository = "https://github.com/nkia-christoph/app-profiles"
license = "GPL-3.0-only"
authors = ["Christoph Kröppl <ch.kroeppl@gmx.at>"]
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.11.0", features = ["attributes", "unstable"] }
convert_case = "0.5.0"
dirs = "4.0.0"
freedesktop-desktop-entry = "0.5.0"
futures-lite = "1.12.0"
glob = "0.3.0"
log = "0.4.16"
pop-launcher = "1.1.0"
regex = "1.5.5"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_regex = "1.1.0"
simplelog = "0.11.2"
smol = "1.2.5"

[[bin]]
name = "app-profiles"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true