[package]
name = "app-profiles"
version = "0.2.2"
repository = "https://github.com/nkia-christoph/app-profiles"
license = "GPL-3.0-only"
authors = ["Christoph Kröppl <ch.kroeppl@gmx.at>"]
edition = "2021"
publish = false

[dependencies]
convert_case = "0.8"
dirs = "6"
freedesktop-desktop-entry = "0.7"
futures-util = { version = "0.3", features = ["io"] }
glob = "0.3"
log = "0.4"
pop-launcher = "1.2"
regex = "1"
ron = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1"
simplelog = "0.12"
shlex = "1"
nix = { version = "0.26.4", features = ["fs"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }

[patch.crates-io]
smithay-client-toolkit = { git = "https://github.com/smithay/client-toolkit", tag = "v0.20.0" }
# feature flag needed since 0.26.0 – force it with this patch
nix = { git = "https://github.com/nix-rust/nix.git", tag = "v0.26.4" }

[dev-dependencies]
pop-launcher-toolkit = { git = "https://github.com/pop-os/launcher/", tag = "1.2.7" }
tokio = { version = "1", features = ["rt", "time"] }

[[bin]]
name = "app-profiles"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
debug = false

[profile.dev]
split-debuginfo = "unpacked"
